fix spacing & add "section" css class

--- a/aleph_modules/core/style.css
+++ b/aleph_modules/core/style.css
@@ -27,11 +27,7 @@ button:hover {
 	color: #111;
 }
 
-#modeSelectorDiv {
-	margin-top: 15px;
-}
-
-#midiSelectorDiv {
+.section {
 	margin-top: 15px;
 }
 
